Set z-index for map to avoid long outer heading text overlapping with map
Outer heading still requires its own z-index otherwise its text is not selectable.

--- a/src/index.css
+++ b/src/index.css
@@ -137,6 +137,7 @@ body > .symbols {
 
 .ui .map {
 	overflow: hidden;
+	z-index: 1;
 }
 .ui.with-map .map {
 	display: block;
